[package]
name = "navigate"
version = "0.1.0"
authors = ["Tom Jones <tomfjones8@gmail.com>"]
description = "Navigation modules in Rust"
readme = "README.md"
edition = "2024"
repository = "https://github.com/lostVkng/navigate"
license = "MIT"

[dependencies]
num-traits = "0.2.19"
rustc-hash = "2.1.1"
indexmap = "2.9.0"